<resources>
    <string name="app_name">Xe Buýt Không Giấy</string>
    <string name="menuHome">Trang Chủ</string>
    <string name="menuProfile">Thông Tin</string>
    <string name="menuAmountOfMoney">Tài Khoản</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="textUsername">Tên đăng nhập</string>
    <string name="textPassword">Mật khẩu</string>
    <string name="hintUsername">Tên đăng nhập...</string>
    <string name="hintPassword">Mật khẩu...</string>
    <string name="btn_Login">Đăng nhập</string>ên
    <string name="btn_Signup">Đăng ký</string>
    <string name="textEmail">Email</string>
    <string name="textStudent">Sinh viên</string>
    <string name="textAmountOfMoney">Tài khoản</string>
    <string name="textForgetPassword">Quên mật khẩu?</string>
    <string name="textHeaderCodeQR">Đây là mã vé của bạn</string>
    <string name="textDescriptionCodeQR">Vui lòng quét mã vé khi lên xe buýt</string>
    <string name="checkStudent">Sinh viên:</string>
    <string name="checkTrue">Có</string>
    <string name="checkFlase">Không</string>
    <string name="textChangeProfile">Cập nhật</string>
    <string name="textCash">Nạp tiền</string>
    <string name="textSeriCash">Số seri thẻ</string>
    <string name="title_active_cash">Nạp tiền vào tài khoản</string>
    <string name="textMajor">Đối tượng:</string>
    <string name="headerMoney">Khoản dư</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textPublicPeople">Tài khoản thường</string>
    <string name="textPrivatePeople">Tài khoản sinh viên</string>
    <string name="textPrice">Khoản dư</string>
    <string name="textLogout">Đăng xuất</string>
    <string name="money">$</string>

</resources>
