<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/two_color_background"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="6">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_margin="20dp"
                    android:weightSum="10"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/radio_background_medium"
                        android:layout_weight="3"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:text="@string/textUsername" />

                            <TextView
                                android:id="@+id/txt_username"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="This is your username" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:text="@string/textEmail" />

                            <TextView
                                android:id="@+id/txt_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="This is your username" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:text="@string/textPrice" />

                            <TextView
                                android:id="@+id/txt_money"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="This is your username" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:text="@string/textMajor" />

                            <TextView
                                android:id="@+id/checkstudent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/textStudent"
                                android:textColor="@color/colorGrayWhite" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="bottom|center"
                        android:layout_weight="7">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:orientation="horizontal"
                            android:gravity="center|bottom"
                            android:weightSum="2"
                            android:layout_margin="8dp">
                            <Button
                                android:layout_weight="1"
                                android:id="@+id/btn_changeProfile"
                                android:layout_width="match_parent"
                                android:background="@drawable/radios_background"
                                android:layout_height="match_parent"
                                android:text="@string/textChangeProfile"
                                android:textColor="@color/colorWhite"
                                android:textAllCaps="false"
                                android:shadowRadius="@android:integer/config_longAnimTime"
                                android:layout_margin="6dp"
                                android:textSize="16dp" />
                            <Button
                                android:layout_weight="1"
                                android:id="@+id/btn_Logout"
                                android:layout_width="match_parent"
                                android:background="@drawable/radios_red_background"
                                android:layout_height="match_parent"
                                android:text="@string/textLogout"
                                android:textColor="@color/colorWhite"
                                android:textAllCaps="false"
                                android:shadowRadius="@android:integer/config_longAnimTime"
                                android:layout_margin="6dp"
                                android:textSize="16dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>