<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/header_background"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_weight="8.6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:drawableRight="@drawable/ic_euro_coin"
                android:textSize="18dp"
                android:gravity="center|left"
                android:text="@string/headerMoney"/>
            <TextView
                android:id="@+id/txt_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="5000 $"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="10"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="3">
                <ImageView
                    android:id="@+id/img_CodeQR"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:background="@color/colorBlack"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="25dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="#34a4f4"
                    android:text="@string/textHeaderCodeQR"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="#34a4f4"
                    android:text="@string/textDescriptionCodeQR"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>