<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/header_background"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:layout_weight="6">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/title_active_cash"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    android:layout_margin="20dp"
                    android:layout_weight="5">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:background="@drawable/textview_background"
                        android:layout_height="70dp">
                        <EditText
                            android:id="@+id/edit_SeriCash"
                            android:layout_width="match_parent"
                            android:paddingLeft="8dp"
                            android:background="@color/colorWhite"
                            android:textSize="16dp"
                            android:singleLine="true"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorBlack"
                            android:hint="@string/textSeriCash" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="20dp"
                        android:gravity="center|top"
                        android:weightSum="2"
                        android:layout_marginTop="30dp"
                        android:layout_weight="5">
                        <Button
                            android:id="@+id/btn_addCash"
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:background="@drawable/radios_background"
                            android:layout_height="60dp"
                            android:text="@string/textCash"
                            android:textColor="@color/colorWhite"
                            android:textAllCaps="false"
                            android:shadowRadius="@android:integer/config_longAnimTime"
                            android:textSize="16dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>