<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_marginTop="20dp"
                    android:id="@+id/profile_image"
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:src="@drawable/ic_school_bus"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_margin="8dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/edit_Username"
                            android:layout_width="match_parent"
                            android:paddingLeft="8dp"
                            android:background="@color/colorWhite"
                            android:textSize="16dp"
                            android:singleLine="true"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorBlack"
                            android:hint="@string/hintUsername" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_background"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/edit_Password"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="8dp"
                            android:singleLine="true"
                            android:background="@color/colorWhite"
                            android:textSize="16dp"
                            android:imeOptions="actionDone"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorBlack"
                            android:password="true"
                            android:hint="@string/hintPassword" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_ForgetPassword"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:layout_height="match_parent"
                        android:textColor="#a99f9f"
                        android:gravity="center"
                        android:text="@string/textForgetPassword" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center|bottom"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/btn_Login"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/btn_Login"
                            android:textColor="@color/colorWhite"
                            android:textAllCaps="false"
                            android:background="@drawable/radios_background"
                            android:shadowRadius="@android:integer/config_longAnimTime"
                            android:layout_margin="6dp"
                            android:textSize="16dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/btn_Signup"
                            android:layout_width="match_parent"
                            android:background="@drawable/radios_background"
                            android:layout_height="60dp"
                            android:text="@string/btn_Signup"
                            android:textColor="@color/colorWhite"
                            android:textAllCaps="false"
                            android:shadowRadius="@android:integer/config_longAnimTime"
                            android:layout_margin="6dp"
                            android:textSize="16dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</android.support.constraint.ConstraintLayout>